# tradetrax01

backend/: database.py  main.py  models.py  schemas.py
backend/engine/: oms.py  signal_generator.py
frontend/src/: App.jsx
oms_rust/: .env  Cargo.toml
oms_rust/src/: main.rs
