[package]
name = "oms_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "0.25.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
reqwest = {version = "0.12", features = ["json"]}
